--- a/environment.yml
+++ b/environment.yml
@@ -2,40 +2,99 @@ name: fpl
 channels:
 - defaults
 dependencies:
+- appnope=0.1.0=py35hd172556_0
+- bleach=2.0.0=py35h7b4af82_0
 - ca-certificates=2017.08.26=ha1e5d58_0
 - certifi=2017.7.27.1=py35h0fdde5e_0
 - cycler=0.10.0=py35hb89929e_0
+- dbus=1.10.22=h50d9ad6_0
+- decorator=4.1.2=py35hf37c5b3_0
+- entrypoints=0.2.3=py35h837ec6f_2
+- expat=2.2.4=hec26022_2
 - freetype=2.8=h143eb01_0
+- gettext=0.19.8.1=hb0f4f8b_2
+- glib=2.53.6=h33f6a65_2
+- html5lib=0.999999999=py35ha3ce4a6_0
+- icu=58.2=hea21ae5_0
 - intel-openmp=2018.0.0=h68bdfb3_7
+- ipykernel=4.6.1=py35h9865fc8_0
+- ipython=6.1.0=py35h3f7db8a_1
+- ipython_genutils=0.2.0=py35hf129286_0
+- ipywidgets=7.0.0=py35hb70205d_0
+- jedi=0.10.2=py35heb0647e_0
+- jinja2=2.9.6=py35h7194686_1
+- jpeg=9b=he5867d9_2
+- jsonschema=2.6.0=py35h2dd9e4b_0
+- jupyter=1.0.0=py35hf3a1ed8_0
+- jupyter_client=5.1.0=py35hfe06ecd_0
+- jupyter_console=5.2.0=py35hd2aa692_1
+- jupyter_core=4.3.0=py35h1d2ac15_0
 - libcxx=4.0.1=h579ed51_0
 - libcxxabi=4.0.1=hebd6815_0
 - libedit=3.1=hb4e282d_0
 - libffi=3.2.1=h475c297_4
 - libgfortran=3.0.1=h93005f0_2
+- libiconv=1.15=h5ed5702_6
 - libpng=1.6.32=h6184301_3
+- libsodium=1.0.13=hba5e272_2
+- markupsafe=1.0=py35h9ba0a7f_1
 - matplotlib=2.1.0=py35hc2166d4_0
+- mistune=0.8.1=py35hb94c1e4_0
 - mkl=2018.0.0=h5ef208c_6
+- nbconvert=5.3.1=py35h63fb950_0
+- nbformat=4.4.0=py35h41c2038_0
 - ncurses=6.0=hd04f020_2
+- notebook=5.2.1=py35h5b7e3fc_0
 - numpy=1.13.3=py35hfd7066c_0
 - openssl=1.0.2m=h86d3e6a_0
 - pandas=0.21.0=py35h4431f20_1
+- pandoc=1.19.2.1=ha5e8f32_1
+- pandocfilters=1.4.2=py35hff87490_1
+- patsy=0.4.1=py35ha57ee9e_0
+- pcre=8.41=h29eefc5_0
+- pexpect=4.2.1=py35hde8bc66_0
+- pickleshare=0.7.4=py35h9517181_0
 - pip=9.0.1=py35h33ce766_4
+- prompt_toolkit=1.0.15=py35h93950c5_0
+- ptyprocess=0.5.2=py35hfc37984_0
+- pygments=2.2.0=py35h392a662_0
 - pyparsing=2.2.0=py35h31fab04_0
+- pyqt=5.6.0=py35hbd126f6_6
 - python=3.5.4=he720263_23
 - python-dateutil=2.6.1=py35h10515e0_1
 - pytz=2017.2=py35h9789cde_1
+- pyzmq=16.0.2=py35h1c7c2ed_2
+- qt=5.6.2=h9975529_14
+- qtconsole=4.3.1=py35hd6d667b_0
 - readline=7.0=hc1231fa_4
+- scipy=1.0.0=py35h8b35106_0
+- seaborn=0.8.0=py35h997229a_0
 - setuptools=36.5.0=py35h52cde6a_0
+- simplegeneric=0.8.1=py35h0a3d746_0
+- sip=4.18.1=py35h79e1f92_2
 - six=1.11.0=py35h39a4c60_1
 - sqlite=3.20.1=h7e4c145_2
+- statsmodels=0.8.0=py35ha7c9052_0
+- terminado=0.6=py35hf269ddc_0
+- testpath=0.3.1=py35hf8009f4_0
 - tk=8.6.7=h35a86e2_3
 - tornado=4.5.2=py35h4099233_0
+- traitlets=4.3.2=py35hd3d1486_0
+- wcwidth=0.1.7=py35hdd0c235_0
+- webencodings=0.5.1=py35hcf8ebf9_1
 - wheel=0.29.0=py35ha7aa5c4_1
+- widgetsnbextension=3.0.2=py35hdbe965d_1
 - xz=5.2.3=h0278029_2
+- zeromq=4.2.2=ha360ad0_2
 - zlib=1.2.11=hf3cbc9b_2
 - pip:
   - adjusttext==0.6.1
   - cython==0.27.3
+  - ipython-genutils==0.2.0
+  - jupyter-client==5.1.0
+  - jupyter-console==5.2.0
+  - jupyter-core==4.3.0
+  - prompt-toolkit==1.0.15
   - pystan==2.17.0.0
 prefix: /anaconda3/envs/fpl
 
